fix: alignment

--- a/src/pages/dashboard/Activity/activity-details.css
+++ b/src/pages/dashboard/Activity/activity-details.css
@@ -376,4 +376,5 @@
 .amount-wrapper{
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
